--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Bu dosya, sade, modern ve ferah bir landing page için optimize edilmiştir.
 </head>
 <body>
   <header class="hero-section">
-    <img src="src/logo/logo.png" alt="EsportsPulse logosu" class="hero-logo" loading="lazy" />
+    <img class="hero-logo" src="src/logo/logo.png" alt="EsportsPulse Logo" />
     <h1 class="hero-title">EsportsPulse</h1>
     <p class="hero-desc">Tüm espor takımlarının maçlarını, canlı skorlarını ve bildirimlerini tek bir noktadan takip et! Modern, hızlı ve tamamen ücretsiz mobil uygulama.</p>
     <button id="downloadBtn" class="download-btn" aria-label="APK İndir">APK İndir</button>
