--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img class="hero-logo" src="src/logo/logo.png" alt="EsportsPulse Logo" />
       <h1 class="hero-title">EsportsPulse</h1>
       <p class="hero-desc">Tüm espor takımlarının maçlarını, canlı skorlarını ve bildirimlerini tek bir noktadan takip et! Modern, hızlı ve tamamen ücretsiz mobil uygulama.</p>
-      <a href="#" class="cta-btn" id="downloadBtn" aria-label="APK İndir">Hemen İndir</a>
+      <a href="http://pulsemobile.vercel.app/src/apk/test.apk" download>Hemen İndir</a>
       <a href="#features" class="cta-secondary">Neden EsportsPulse?</a>
     </div>
     <div class="hero-bg-anim"></div>
